<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Bt_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:background="@color/Bt_Login"
        android:text="@string/Txt_Login"
        android:textColor="@color/Txt_Chu"
        app:layout_constraintEnd_toStartOf="@+id/Bt_Register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Txt_FaceBook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/Txt_Facebook"
        android:drawableLeft="@drawable/fb"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/Txt_Facebook"
        android:textColor="@color/Txt_Chu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Txt_GoogLe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bt_Login"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/Txt_GoogLe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/Txt_Google"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/Txt_Google"
        android:textColor="@color/Txt_Chu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Txt_FaceBook"
        app:layout_constraintTop_toBottomOf="@+id/Bt_Register"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/Bt_Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:background="@color/Bt_Register"
        android:text="@string/Txt_Register"
        android:textColor="@color/Txt_Chu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Bt_Login"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>