<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt_error"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background">

    <Button
        android:id="@+id/BT_Login_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/Sign_in"
        android:textColor="@color/Txt_Chu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BT_Register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Error" />

    <EditText
        android:id="@+id/Ed_UserName_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Ed_UserName"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/Ed_Password_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/Ed_Password_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/Ed_Password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ed_UserName_Login" />

    <Button
        android:id="@+id/BT_Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Txt_Facebook"
        android:text="@string/Sign_up"
        android:textColor="@color/Txt_Chu"
        app:layout_constraintBottom_toBottomOf="@+id/BT_Login_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/BT_Login_Login"
        app:layout_constraintTop_toTopOf="@+id/BT_Login_Login" />

    <TextView
        android:id="@+id/TXT_Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Ed_Password_Login"
        app:layout_constraintStart_toStartOf="@+id/Ed_Password_Login"
        app:layout_constraintTop_toBottomOf="@+id/Ed_Password_Login" />

</android.support.constraint.ConstraintLayout>